增加bloom过滤器